--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "tsx watch src/server.ts",
     "knex": "node --no-warnings --loader tsx ./node_modules/.bin/knex",
     "lint": "eslint src --ext .ts --fix",
+    "build": "tsup src --out-dir build",
     "test": "vitest"
   },
   "keywords": [],
@@ -19,6 +20,7 @@
     "@types/supertest": "^6.0.2",
     "globals": "^15.2.0",
     "supertest": "^7.0.0",
+    "tsup": "^8.0.2",
     "tsx": "^4.10.2",
     "typescript": "^5.4.5",
     "typescript-eslint": "^7.9.0",
