--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "engines": {
+    "node": ">=18"
+  },
   "scripts": {
     "dev": "tsx watch src/server.ts",
     "knex": "node --no-warnings --loader tsx ./node_modules/.bin/knex",
@@ -24,14 +27,15 @@
     "tsx": "^4.10.2",
     "typescript": "^5.4.5",
     "typescript-eslint": "^7.9.0",
-    "vitest": "^1.6.0"
+    "vitest": "^1.6.0",
+    "sqlite3": "^5.1.7"
   },
   "dependencies": {
     "@fastify/cookie": "^9.3.1",
     "dotenv": "^16.4.5",
     "fastify": "^4.27.0",
     "knex": "^3.1.0",
-    "sqlite3": "^5.1.7",
+    "pg": "^8.11.5",
     "zod": "^3.23.8"
   }
 }
